--- a/app/src/main/res/layout/activity_detalle_pelicula.xml
+++ b/app/src/main/res/layout/activity_detalle_pelicula.xml
@@ -5,30 +5,52 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetallePelicula">
+    tools:context=".DetallePelicula"
+    android:background="@drawable/fondo_pantalla_gradiant">
 
     <ImageView
         android:id="@+id/pelicula_imagen"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bones"
+        android:layout_height="310dp"
+        android:src="@drawable/headerbighero6"
+        android:scaleType="fitXY"
+        android:layout_marginBottom="15dp"
         />
 
-    <TextView
-        android:id="@+id/pelicula_nombre"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="BONES"
-        android:textSize="24sp"
-        android:gravity="center"
-        />
+        android:orientation="horizontal"
+        android:paddingLeft="35dp"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:id="@+id/pelicula_nombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Big Hero 6"
+            android:textSize="25sp"
+            android:textColor="@color/amarillo"
+            android:textStyle="bold"
+            />
+        <ImageView
+            android:layout_width="400dp"
+            android:layout_height="2dp"
+            android:background="@color/amarillo"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="10dp"
+            />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/pelicula_descripcion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Aqui va toda la informacion de la pelicula estoy rellenando para ver como se miraria."
-        android:textSize="20sp"
+        android:text="Aqui va toda la informacion de la pelicula estoyasdasd fsafasfasf asfasf asfasfasf asdasdasdasd rellenando para ver como se miraria."
+        android:textSize="14sp"
+        android:textColor="@color/white_grey"
+        android:paddingHorizontal="35dp"
+        android:layout_gravity="right"
         />
 
 </LinearLayout>
