--- a/app/src/main/res/layout/pelicula.xml
+++ b/app/src/main/res/layout/pelicula.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="3pt">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,10 +19,11 @@
         <TextView
             android:id="@+id/titulo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="BONES"
+            android:layout_height="match_parent"
+            android:text="MEN IN BLACK asfasfasfasf"
             android:gravity="center"
             android:textSize="20sp"
+            android:textColor="@color/amarillo"
             />
 
     </LinearLayout>
