--- a/app/src/main/res/drawable/campo_texto.xml
+++ b/app/src/main/res/drawable/campo_texto.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="40dp" />
-            <solid android:color="#EFEC34"/>
+            <corners android:radius="10dp" />
+            <solid android:color="#FFFFFF"/>
         </shape>
     </item>
 </selector>
