--- a/app/src/main/res/layout/pelicula.xml
+++ b/app/src/main/res/layout/pelicula.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
@@ -16,15 +16,17 @@
             android:src="@drawable/bones"
             />
 
+
         <TextView
             android:id="@+id/titulo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="MEN IN BLACK asfasfasfasf"
+            android:text="Spiderman \ninto\n the spiderverse"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="@color/amarillo"
             />
+
 
     </LinearLayout>
 
