--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,11 @@
     <color name="grey">#323232</color>
     <color name="white">#FFFFFFFF</color>
     <color name="amarillo">#FCB929</color>
-    <color name="white_grey">#D8D4D4</color>
+    <color name="white_grey">#C6C4C4</color>
 
     <color name="fondoPrincipal">#1D1D1D</color>
     <color name="fondoBotonPrincipal">#FFD501</color>
+    <color name="colorLetra">#252424</color>
     <color name="fondoLetraPrincipal">#C5C5C5</color>
+    <color name="gris_radioNoSeleccinado">#8C8A8A</color>
 </resources>
